[package]
name = "raft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
futures = "0.3.30"
libp2p = {version ="0.53.2",features =  [ "tokio", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux", "quic","async-std","tls","ping"]}
tokio = { version = "1.38.0",features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
async-std = { version = "1.12.0", features = ["attributes"] }
tokio-js-set-interval = "1.3.0"
chrono = "0.4.38"
serde = {version ="1.0.203",features = ["derive"] }
bincode = "1.3.3"
